--- a/chat.html
+++ b/chat.html
@@ -5,7 +5,7 @@
   <meta name="viewport"
     content="width=device-width,
        initial-scale=1.0">
-  <title>Chat</title>
+  <title>Recomendaciones</title>
   <script
     src="https://www.gstatic.com/firebasejs/8.5.0/firebase-app.js">
     </script>
@@ -33,7 +33,8 @@
   <mi-nav></mi-nav>
   <form name="forma">
     <header>
-      <h1>Chat</h1>
+      <h1>Recomendaciones</h1>
+      <p>A continuación escriba su recomendacion y de clic en "enviar" para que algún administrador lo vea</p>
       <div class="herramientas">
         <input name="texto"
           required
