--- a/chat.html
+++ b/chat.html
@@ -3,8 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport"
-    content="width=device-width,
-       initial-scale=1.0">
+    content="width=device-width, initial-scale=1.0">
   <title>Recomendaciones</title>
   <script
     src="https://www.gstatic.com/firebasejs/8.5.0/firebase-app.js">
