--- a/alumnoNuevo.html
+++ b/alumnoNuevo.html
@@ -6,7 +6,7 @@
     content="width=device-width,
        initial-scale=1.0">
   <title>
-    Alumno Nuevo
+    Bibliografía nueva
   </title>
   <script
     src="https://www.gstatic.com/firebasejs/8.5.0/firebase-app.js"></script>
@@ -29,7 +29,7 @@
   <form name="forma">
     <mi-nav></mi-nav>
     <header>
-      <h1>Alumno Nuevo</h1>
+      <h1>Datos Nuevos</h1>
       <div class="herramientas">
         <a
           href="alumnos.html">
@@ -41,35 +41,35 @@
     </header>
     <p>
       <label>
-        Matricula
+        Titulo
         <input name="matricula"
           type="text" required>
       </label>
     </p>
     <p>
       <label>
-        Nombre
+        Autor
         <input name="nombre"
           type="text" required>
       </label>
     </p>
     <p>
       <label>
-        Teléfono
+        Páginas
         <input name="telefono"
           type="text" required>
       </label>
     </p>
     <p>
       <label>
-        Grupo
+        Editorial
         <input name="grupo"
           type="text" required>
       </label>
     </p>
     <p>
       <label>
-        Fecha
+        Fecha de publicación
         <input name="fecha"
           type="date" required>
       </label>
