--- a/alumnoNuevo.html
+++ b/alumnoNuevo.html
@@ -57,7 +57,7 @@
       <label>
         Páginas
         <input name="telefono"
-          type="text" required>
+          type="number" required>
       </label>
     </p>
     <p>
