--- a/alumno.html
+++ b/alumno.html
@@ -30,7 +30,7 @@
   <form name="forma">
     <mi-nav></mi-nav>
     <header>
-      <h1>Alumno</h1>
+      <h1>Libro</h1>
       <div class="herramientas">
         <a href="alumnos.html">
           Cancelar</a>
@@ -43,28 +43,28 @@
     </header>
     <p>
       <label>
-        Matricula
+        Titulo
         <input name="matricula"
           type="text" required>
       </label>
     </p>
     <p>
       <label>
-        Nombre
+        Autor
         <input name="nombre"
           type="text" required>
       </label>
     </p>
     <p>
       <label>
-        Teléfono
+      Páginas
         <input name="telefono"
           type="text" required>
       </label>
     </p>
     <p>
       <label>
-        Grupo
+      Editorial
         <input name="grupo"
           type="text" required>
       </label>
