--- a/alumnoNuevo.html
+++ b/alumnoNuevo.html
@@ -42,28 +42,28 @@
     <p>
       <label>
         Titulo
-        <input name="matricula"
+        <input name="titulo"
           type="text" required>
       </label>
     </p>
     <p>
       <label>
         Autor
-        <input name="nombre"
+        <input name="autor"
           type="text" required>
       </label>
     </p>
     <p>
       <label>
         Páginas
-        <input name="telefono"
+        <input name="paginas"
           type="text" required>
       </label>
     </p>
     <p>
       <label>
         Editorial
-        <input name="grupo"
+        <input name="editorial"
           type="text" required>
       </label>
     </p>
