--- a/alumno.html
+++ b/alumno.html
@@ -5,7 +5,7 @@
   <meta name="viewport"
     content="width=device-width,
        initial-scale=1.0">
-  <title>Alumno</title>
+  <title>Datos de un libro</title>
   <script
     src="https://www.gstatic.com/firebasejs/8.5.0/firebase-app.js">
     </script>
@@ -44,34 +44,34 @@
     <p>
       <label>
         Titulo
-        <input name="matricula"
+        <input name="titulo"
           type="text" required>
       </label>
     </p>
     <p>
       <label>
         Autor
-        <input name="nombre"
+        <input name="autor"
           type="text" required>
       </label>
     </p>
     <p>
       <label>
       Páginas
-        <input name="telefono"
-          type="text" required>
+        <input name="paginas"
+          type="number" required>
       </label>
     </p>
     <p>
       <label>
       Editorial
-        <input name="grupo"
+        <input name="editorial"
           type="text" required>
       </label>
     </p>
     <p>
       <label>
-        Fecha
+        Fecha de publicación
         <input name="fecha" type="date" required>
       </label>
     </p>
