--- a/alumno.html
+++ b/alumno.html
@@ -32,7 +32,7 @@
     <header>
       <h1>Libro</h1>
       <div class="herramientas">
-        <a href="alumnos.html">
+        <a href="libros.html">
           Cancelar</a>
         <button>Guardar</button>
         <button name="eliminar"
@@ -78,7 +78,7 @@
     <mi-footer></mi-footer>
   </form>
   <script type="module"
-    src="js/CtrlAlumno.js">
+    src="js/CtrlLibro.js">
     </script>
 </body>
 </html>
