--- a/alumnoNuevo.html
+++ b/alumnoNuevo.html
@@ -31,8 +31,8 @@
     <header>
       <h1>Datos Nuevos</h1>
       <div class="herramientas">
-        <a
-          href="alumnos.html">
+        <a href="libros.html">
+      <!-- href="alumnos.html"-->    
           Cancelar</a>
         <button type="submit">
           Guardar
@@ -77,8 +77,10 @@
     <mi-footer></mi-footer>
   </form>
   <script type="module"
-    src="js/CtrlAlumnoNuevo.js">
-    </script>
+    src= "js/CtrlLibroNuevo.js">
+  </script>
+
+    <!--"js/CtrlAlumnoNuevo.js"-->
 </body>
 </html>
 
