--- a/alumnos.html
+++ b/alumnos.html
@@ -35,8 +35,8 @@
     <h1>Bibliografia registrada</h1>
     <div class="herramientas">
       <a
-        href="alumnoNuevo.html">
-        Agregar…</a>
+        href="libroNuevo.html">
+        Agregar bibliografía nueva…</a>
     </div>
   </header>
   <ul id="lista" class="lista">
@@ -47,8 +47,10 @@
   </ul>
   <mi-footer></mi-footer>
   <script type="module"
-    src="js/CtrlAlumnos.js">
+  src="js/CtrlLibros.js"> 
     </script>
+
+<!--src="js/CtrlAlumnos.js">-->
 </body>
 </html>
 
