--- a/libros.html
+++ b/libros.html
@@ -39,6 +39,7 @@
         Agregar bibliografía nueva…</a>
     </div>
   </header>
+  <p>Se muestra la bibliografía registrada al momento</p>
   <ul id="lista" class="lista">
     <li>
       <mi-progreso>
